--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
 [submodule "Http"]
 	path = Http
 	url = git@github.com:terrazza/component-http.git
+	branch = main
 [submodule "ReflectionClass"]
 	path = ReflectionClass
 	url = git@github.com:terrazza/component-reflectionclass.git
+	branch = main
 [submodule "Serializer"]
 	path = Serializer
 	url = git@github.com:terrazza/component-serializer.git
+	branch = main
