--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,15 @@
 [submodule "Http"]
 	path = Http
 	url = git@github.com:terrazza/component-http.git
-	branch = main
 [submodule "ReflectionClass"]
 	path = ReflectionClass
 	url = git@github.com:terrazza/component-reflectionclass.git
-	branch = main
 [submodule "Serializer"]
 	path = Serializer
 	url = git@github.com:terrazza/component-serializer.git
-	branch = main
+[submodule "routing"]
+	path = Routing
+	url = git@github.com:terrazza/routing.git
+[submodule "routing-http"]
+	path = routing-http
+	url = git@github.com:terrazza/routing-http.git
